@@ -1,3 +1,7 @@
+2005-01-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/AxxessIT.pm: new discovery module
+
 2005-01-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (checkdevtype):
